Navbar and main picture in home component updated.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,25 +1,5 @@
-<div class="nav-container">
-    <div class="nav-logo">
-        Logo
-    </div>
-    <div class="main-nav">
-        <ul>
-            <li>
-                За дома
-            </li>
-            <li>
-                За градината
-            </li>
-        </ul>
-    </div>
-    <div class="misc-nav">
-        <ul>
-            <li>
-                Кошница
-            </li>
-            <li>
-                Профил
-            </li>
-        </ul>
+<div class="main">
+    <div class="main-picture">
+        <img src="assets\BG.png" alt="Picture not found">
     </div>
 </div>
