--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,52 +1,13 @@
-.nav-container{
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.main{
 
-    height: 4.5rem;
-    width: 100%;
-    top: 0;
-    position: sticky;
-
-    background-color: lightblue;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    line-height: 1.5;
-    color: #25523B;
-    text-transform: uppercase;
-    font-weight: 700;
-
-    border: 0;
-    z-index: 100;
 }
-    .nav-logo{
-        margin-left: 4rem;
-        font-size: 1.5rem;
+
+    .main-picture{
+        height: calc(100vh - 4.5rem);
+        width: 100vw;
+        object-fit: cover;
     }
-
-    .main-nav{
-    }
-
-        .main-nav ul{
-            display: flex;
-            list-style-type: none;
-            gap: 1.5rem;
-        }
-        
-        .main-nav li{
-
-        }
-
-    .misc-nav{
-        margin-right: 4rem;
-    }
-        .misc-nav ul{
-            display: flex;
-            list-style-type: none;
-            gap: 1rem;
-        }
-
-        .misc-nav li{
-
+        .main-picture > img{
+            width: 100%;
+            height: 100%;
         }
