--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,1 +1,25 @@
-<p>nav works!</p>
+<div class="nav-container">
+    <div class="nav-logo">
+        Logo
+    </div>
+    <div class="main-nav">
+        <ul>
+            <li>
+                За дома
+            </li>
+            <li>
+                За градината
+            </li>
+        </ul>
+    </div>
+    <div class="misc-nav">
+        <ul>
+            <li>
+                Кошница
+            </li>
+            <li>
+                Профил
+            </li>
+        </ul>
+    </div>
+</div>
