Updated home shop now button style.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,13 @@
 <div class="main">
     <div class="main-picture">
         <img src="assets\BG.png" alt="Picture not found">
+        <div class="main-picture-inner-container">
+            <h1>
+                Намери Своето Растение
+            </h1>
+            <button>
+                Пазарувай сега
+            </button>
+        </div>
     </div>
 </div>
