--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,3 +11,36 @@
             width: 100%;
             height: 100%;
         }
+
+        .main-picture-inner-container{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1;
+        }
+
+            .main-picture-inner-container > h1{
+                font-size: 4rem;
+                line-height: 1.2;
+                margin-bottom: 1rem;
+                color: White;
+            }
+
+            .main-picture-inner-container > button{
+                font-size: 1.5rem;
+                line-height: 1.2;
+
+                margin-bottom: 1rem;
+                padding: 1.2rem;
+
+                color: #25523B;
+                background-color: peachpuff;
+
+                border: none;
+                border-radius: 3rem;
+                cursor: pointer;
+            }
