--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,3 +11,29 @@
         </div>
     </div>
 </div>
+<div class="best-seller-container">
+    <h1>
+        Най-продавани
+    </h1>
+    <div class="cards-container">
+        <div class="card">
+            <img src="assets\card.png">
+            <p>aasd</p>
+        </div>
+
+        <div class="card">
+            <img src="assets\card.png">
+            <p>aasd</p>
+        </div>
+
+        <div class="card">
+            <img src="assets\card.png">
+            <p>aasd</p>
+        </div>
+
+        <div class="card">
+            <img src="assets\card.png">
+            <p>aasd</p>
+        </div>
+    </div>
+</div>
