--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -61,18 +61,18 @@
 .best-seller-container{
     display: flex;
     flex-direction: column;
+    background-color: rgb(253, 250, 245);
 
     justify-content: start;
     align-items: center;
 
     height: 100vh;
     width: 100vw;
-    border: 1px solid red;
 }
     .best-seller-container > h1{
         margin-top: 7vh;
         margin-bottom: 3.5vh;
-        margin-left: 10vw;
+        margin-left: calc(15vw + 1.2rem);
 
         align-self: start;
         overflow: hidden;
@@ -90,19 +90,61 @@
 
         flex-wrap: nowrap;
 
-        height: 50vh;
-        width: 80vw;
+        height: 60vh;
+        width: 70vw;
 
-        background-color: green;
     }
 
         .cards-container > .card{
-            flex: 0 0 30%;
-            border: 1px solid blue;
+            flex: 0 0 25%;
+            padding: 1.2rem;
         }
 
             .card > img{
                 width: 100%;
-                height: 80%;
+                height: 85%;
                 object-fit: cover;
             }
+
+            .card-details-grid{
+                display: grid;
+                grid-template-rows: repeat(3, 1fr);
+
+                margin-top: .6rem;
+            }
+
+                .card-details{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    flex-wrap: nowrap;
+
+                    grid-row: 1;
+
+                    font-size: 1.4rem;
+                    font-weight: 500;
+                    color:#25523B;
+                }
+
+                .card-secondary-details{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    flex-wrap: nowrap;
+
+                    grid-row: 2;
+
+                    font-size: 1.1rem;
+                    font-weight: 500;
+                    color:#25523B;
+
+                    margin-block: .25rem;
+                }
+                
+                .card-colors{
+                    display: flex;
+                    flex-wrap: nowrap;
+                    justify-content: start;
+
+                    grid-row: 3;
+                }
