--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -10,7 +10,7 @@
     top: 0;
     position: sticky;
 
-    background-color: white;
+    background-color: rgb(253, 250, 245);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     line-height: 1.5;
     color: #25523B;
