Added indoor-plants component; Added indoor-plants layout.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
             <h1>
                 Намери Своето Растение
             </h1>
-            <button>
+            <button routerLink="/indoor-plants">
                 Пазарувай сега
             </button>
         </div>
