Added product cards in indoor-plants component.

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,5 +1,5 @@
 <div class="nav-container">
-    <div class="nav-logo">
+    <div routerLink="" class="nav-logo">
         Logo
     </div>
     <div class="main-nav">
