--- a/src/app/indoor-plants/indoor-plants.component.css
+++ b/src/app/indoor-plants/indoor-plants.component.css
@@ -107,3 +107,55 @@
 
         justify-items: center;
     }
+        .card{
+            padding: 1.2rem;
+        }
+
+            .card > img{
+                width: 100%;
+                height: 85%;
+                object-fit: cover;
+            }
+
+            .card-details-grid{
+                display: grid;
+                grid-template-rows: repeat(3, 1fr);
+
+                margin-top: .6rem;
+            }
+
+                .card-details{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    flex-wrap: nowrap;
+
+                    grid-row: 1;
+
+                    font-size: 1.4rem;
+                    font-weight: 500;
+                    color:#25523B;
+                }
+
+                .card-secondary-details{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-between;
+                    flex-wrap: nowrap;
+
+                    grid-row: 2;
+
+                    font-size: 1.1rem;
+                    font-weight: 500;
+                    color:#25523B;
+
+                    margin-block: .25rem;
+                }
+                
+                .card-colors{
+                    display: flex;
+                    flex-wrap: nowrap;
+                    justify-content: start;
+
+                    grid-row: 3;
+                }
