--- a/src/app/indoor-plants/indoor-plants.component.html
+++ b/src/app/indoor-plants/indoor-plants.component.html
@@ -132,23 +132,15 @@
 <div class="products-container">
     <div *ngFor="let i of [1, 2, 3, 4, 5, 6]" class="card">
         <img src="assets\card.png">
+        <button class="add-to-cart-btn">
+            добави в количка
+        </button>
         <div class="card-details-grid">
             <div class="card-details">
                 <h1>Орхидея</h1>
                 <p>90.00 лв.</p>
             </div>
-            <div class="card-secondary-details">
-                <h1>Blue</h1>
-                <p>MD/LG</p>
-            </div>
-            <div class="card-colors">
-                <select id="color-option">
-                    <option value="" selected disabled>Select a color</option>
-                    <option value="red">Red</option>
-                    <option value="blue">Blue</option>
-                    <option value="green">Green</option>
-                  </select>
-            </div>
-        </div>
+            <!-- <div class="card-secondary-details">
+            </div> -->
     </div>
 </div>
