--- a/src/app/indoor-plants/indoor-plants.component.html
+++ b/src/app/indoor-plants/indoor-plants.component.html
@@ -8,15 +8,15 @@
 
     <div class="sort">
         <ul [style.border]="isSortDropdownOpen ? '1px solid #25523B' : '1px solid rgba(36, 61, 41, 0.16)'" (click)="toggleSortDropdown()" id="selected" class="sort-select">
-            <li class="selected">Препоръчани</li> 
-        </ul>
+            <li class="selected">{{ selectedText }}</li> 
+          </ul>
         
         <ul *ngIf="isSortDropdownOpen" id="not-selected" class="sort-select-container">
-            <li class="active">Препоръчани</li> 
-            <li>Цена: Ниска към Висока</li>
-            <li>Цена: Висока към Ниска</li>
-            <li>Най-Нови</li>
-            <li>Най-продавани</li>
+            <li [class.active]="activeItem === 0" (click)="onItemClick(0, 'Препоръчани')">Препоръчани</li> 
+            <li [class.active]="activeItem === 1" (click)="onItemClick(1, 'Цена: Ниска към Висока')">Цена: Ниска към Висока</li>
+            <li [class.active]="activeItem === 2" (click)="onItemClick(2, 'Цена: Висока към Ниска')">Цена: Висока към Ниска</li>
+            <li [class.active]="activeItem === 3" (click)="onItemClick(3, 'Най-Нови')">Най-Нови</li>
+            <li [class.active]="activeItem === 4" (click)="onItemClick(4, 'Най-продавани')">Най-продавани</li>
         </ul>
     </div>
 
