--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -1,17 +1,21 @@
+body{
+    background-color: rgb(253, 250, 245);
+}
+
 .product-details-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 3rem;
 
     margin-inline: 12vw;
-    background-color: lightblue;
+
+    gap: 3rem;
 }
 
     .product-images{
         display: grid;
         grid-template-columns: repeat(2, auto);
 
-        max-width: 38vw;
+        width: 42vw;
     }
 
         .small-images-container{
@@ -49,5 +53,55 @@
             }
 
     .product-description{
+        margin-top: 2rem;
+        margin-right: 3rem;
+        justify-items: space-between;
+        
+        color: #25523B;
 
+        max-width: 22vw;
     }
+
+        .product-description-header{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: space-between;
+
+            font-weight: 600;
+            font-size: 1.5rem;
+            letter-spacing: .03em;
+        }
+
+        .product-description-description{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 3rem;
+            margin-top: 3rem;
+
+            font-size: 1.1rem;
+            font-weight: 400;
+            line-height: 1.6;
+        }
+
+        .add-to-cart-btn{
+            display: inline-block;
+            
+            font-size: 1rem;
+            text-transform: uppercase;
+            padding: 16px 32px;
+
+            width: 60%;
+
+            background: #224229;
+            border: 1px solid #224229;
+            color: white;
+
+            border-radius: 2.5rem;
+            cursor: pointer;
+
+            text-align: center;
+            text-decoration: none;
+            transition: .2s;
+        }
