--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -1,5 +1,8 @@
-body{
-    background-color: rgb(253, 250, 245);
+.product-container{
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+
+    gap: 10vh;
 }
 
 .product-details-container{
@@ -76,8 +79,8 @@ body{
         .product-description-description{
             display: flex;
             flex-direction: column;
-            align-items: center;
-            gap: 3rem;
+            align-items: start;
+            gap: 1rem;
             margin-top: 3rem;
 
             font-size: 1.1rem;
@@ -85,8 +88,20 @@ body{
             line-height: 1.6;
         }
 
+            .bullet-point{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                justify-content: start;
+                gap: 1.5rem;
+            }
+
         .add-to-cart-btn{
             display: inline-block;
+            justify-self: center;
+            align-self: center;
+
+            margin-top: 1rem;
             
             font-size: 1rem;
             text-transform: uppercase;
@@ -104,4 +119,68 @@ body{
             text-align: center;
             text-decoration: none;
             transition: .2s;
+        }
+
+        .add-to-cart-btn:hover{
+            background-color: #0e3a17;
+        }
+
+.description-container{
+    display: grid;
+    grid-template-columns: auto auto;
+    overflow: hidden;
+
+    margin-inline: auto;
+    width: max(70vw);
+
+    background-color: rgb(253, 241, 218)
+}
+
+    .description{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        justify-items: center;
+
+        overflow-wrap: break-word;
+        line-height: 1.6;
+        font-size: 1.2rem;
+        color: #25523B;
+        gap: .5rem;
+
+        padding: 12%;
+    }
+
+        .description-header h1{
+            font-size: 1.4rem;
+            font-weight: 600;
+            margin-bottom: .8rem;
+        }
+
+    .description-footer{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        gap: 3rem;
+
+        border-top: 1px solid rgb(215, 215, 215);
+
+        padding-top: 1.5rem;
+        margin-top: 1.5rem;
+    }
+
+        .description-footer h1{
+            font-size: 1.4rem;
+            font-weight: 600;
+        }
+
+    .description-picture-container{
+        display: flex;
+        justify-content: center;
+    }
+
+        .description-picture-container img{
+            object-fit: cover;
+            max-height: 100%;
+            max-width: 100%;
         }
