--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,43 +1,85 @@
-<div class="details-container">
-    <div class="product-details-container">
-        <div class="product-images">
-            <div class="small-images-container">
-                <img src="assets\card.png">
-                <img src="assets\card.png">
-                <img src="assets\card.png">
-                <img src="assets\card.png">
+<div class="product-container">
+    <div class="details-container">
+        <div class="product-details-container">
+            <div class="product-images">
+                <div class="small-images-container">
+                    <img src="assets\card.png">
+                    <img src="assets\card.png">
+                    <img src="assets\card.png">
+                    <img src="assets\card.png">
+                </div>
+                <div class="big-image-container">
+                    <img src="assets\card.png">
+                </div>
             </div>
-            <div class="big-image-container">
-                <img src="assets\card.png">
-            </div>
-        </div>
-        <div class="product-description">
-            <div class="product-description-header">
-                <h1>
-                    Орхидея
-                </h1>
-
-                <h1>
-                    80$ лв
-                </h1>
-            </div>
-
-            <div class="product-description-description">
-                <p>
-                    s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
-                </p>
-                
-                <p>*Трудност за отглеждане</p>
-
-                <p>Количество</p>
-                <p>Големина</p>
-
-
-                <button class="add-to-cart-btn">
-                    Добави в количка
-                </button>
+            <div class="product-description">
+                <div class="product-description-header">
+                    <h1>
+                        Орхидея
+                    </h1>
+    
+                    <h1>
+                        80 лв.
+                    </h1>
+                </div>
+    
+                <div class="product-description-description">
+                    <p>
+                        s simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
+                    </p>
+                    
+                    <div class="bullet-point">
+                        <p class="font-2rem">&#x2022;</p>
+                        <p>Трудност за отглеждане</p>
+                    </div>
+    
+                    <div class="bullet-point">
+                        <p>&#x2022;</p>
+                        <p>Количество</p>
+                    </div>
+    
+                    <div class="bullet-point">
+                        <p>&#x2022;</p>
+                        <p>Големина</p>
+                    </div>
+                    <button class="add-to-cart-btn">
+                        Добави в количка
+                    </button>
+                </div>
             </div>
         </div>
     </div>
 
+    <div class="description-container">
+        <div class="description">
+            <div class="description-header">
+                <h1>Описание</h1>
+            </div>
+            <p>
+                Lorem ipsus asdasdLorem ipsus asdasdLorem ipsus asdasdLorem ipsus asdasdLorem ipsus asdasd Lorem ipsus asdasdLorem ipsus asdasdLorem ipsus asdasdLorem ipsus asdasdLorem ipsus asdasd Lorem ipsus asdasdLorem ipsus asdasdLorem ipsus asdasdLorem ipsus asdasdLorem ipsus asdasd
+            </p>
+            <div class="description-footer">
+                <div>
+                    <h1>
+                        Често Срещани Имена
+                    </h1>
+                    <p>
+                        Орхидея алабала, Орхдея нещо си
+                    </p>
+                </div>
+
+                <div>
+                    <h1>
+                        Ботаническо Име
+                    </h1>
+                    <p>
+                        Orchidaceae
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="description-picture-container">
+            <img src="assets\card.png">
+        </div>
+    </div>
 </div>
