Added cart component.

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,7 +50,8 @@ html,body
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden; 
+    overflow-x: hidden;
+    /* background-color: rgb(253, 250, 245); */
 }
 
 .service-textfield{
