Checkout UI implemented.

--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -30,7 +30,7 @@
                 <p class="total-price">30 лв.</p>
             </div>
             <div class="order-btn-container">
-                <button class="order-btn" >Поръчай</button>
+                <button class="order-btn" routerLink="/Checkout" >Продължи към плащане</button>
             </div>
         </div>
     </div>
