--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="misc-nav">
         <ul>
-            <li>
+            <li routerLink="/Cart">
                 Кошница
             </li>
             <li>
