--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -43,7 +43,7 @@
             <div class="cart-product" *ngFor="let item of [1,2,3,4]">
                 <div class="picture-container">
                     <!-- <img [src]="getBase64ImageUrl(item.picturesData[0])" alt="Product Image"> -->
-                    <img src="assets\card.png">
+                    <img src="assets\card.png" alt="Product picture">
                 </div>
                 <div class="description-container">
                     <!-- <p class="name">{{item.name}}</p>
