Added footer UI

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,24 @@
-<p>footer works!</p>
+<div class="footer-container">
+    <div class="nav-container">
+        <ul class="nav">
+            <li>
+                За нас
+            </li>
+            <li>
+                Блог
+            </li>
+        </ul>
+
+        <ul class="nav">
+            <li>
+                Често задавани въпроси
+            </li>
+            <li>
+                Проследи пратка
+            </li>
+            <li>
+                Обслужване на клиенти
+            </li>
+        </ul>
+    </div>
+</div>
