--- a/src/app/indoor-plants/indoor-plants.component.html
+++ b/src/app/indoor-plants/indoor-plants.component.html
@@ -139,7 +139,7 @@
 
 <div class="products-container">
     <div *ngFor="let i of [1, 2, 3, 4, 5, 6]" class="card">
-        <img src="assets\card.png">
+        <img src="assets\card.png" alt="Product image">
         <button class="add-to-cart-btn">
             добави в количка
         </button>
