Added margin-bottom on cart, indoor-plants and product-details componennts for space between footer and content.

--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,8 +1,10 @@
 .cart-container{
     display: grid;
+    min-height: calc(100vh - 4.5rem);
     grid-template-columns: repeat(3, 1fr);
     width: 100%;
     margin-top: 2%;
+    margin-bottom: 10vh;
     filter: blur(0);
     color: #25523B;
 }
