--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -131,6 +131,7 @@
     overflow: hidden;
 
     margin-inline: auto;
+    margin-bottom: 15vh;
     width: max(70vw);
 
     background-color: rgb(253, 241, 218)
