--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -79,7 +79,7 @@
             </div>
         </div>
         <div class="description-picture-container">
-            <img src="assets\card.png">
+            <img src="assets\card.png" alt="Product picture">
         </div>
     </div>
 </div>
