--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,32 +25,47 @@
                 </div>
                 <div class="card-secondary-details">
                     <h1>Blue</h1>
-                    <p>MD/LG</p>
-                </div>
-                <div class="card-colors">
-                    <select id="color-option">
-                        <option value="" selected disabled>Select a color</option>
-                        <option value="red">Red</option>
-                        <option value="blue">Blue</option>
-                        <option value="green">Green</option>
-                      </select>
                 </div>
             </div>
         </div>
 
         <div class="card">
             <img src="assets\card.png">
-            <p>aasd</p>
+            <div class="card-details-grid">
+                <div class="card-details">
+                    <h1>Орхидея</h1>
+                    <p>90.00 лв.</p>
+                </div>
+                <div class="card-secondary-details">
+                    <h1>Blue</h1>
+                </div>
+            </div>
         </div>
 
         <div class="card">
             <img src="assets\card.png">
-            <p>aasd</p>
+            <div class="card-details-grid">
+                <div class="card-details">
+                    <h1>Орхидея</h1>
+                    <p>90.00 лв.</p>
+                </div>
+                <div class="card-secondary-details">
+                    <h1>Blue</h1>
+                </div>
+            </div>
         </div>
 
         <div class="card">
             <img src="assets\card.png">
-            <p>aasd</p>
+            <div class="card-details-grid">
+                <div class="card-details">
+                    <h1>Орхидея</h1>
+                    <p>90.00 лв.</p>
+                </div>
+                <div class="card-secondary-details">
+                    <h1>Blue</h1>
+                </div>
+            </div>
         </div>
     </div>
 </div>
