--- a/src/app/indoor-plants/indoor-plants.component.css
+++ b/src/app/indoor-plants/indoor-plants.component.css
@@ -1,44 +1,33 @@
-.container{
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
+.header-container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 
-    margin-bottom: 10vh;
+    max-width: 100%;
+    width: 1440px;
+
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2rem;
+    padding-block: 20px;
 }
 
     .header{
-        grid-column: 2;
-
-        display: flex;
-        justify-content: end;
-        align-items: end;   
-        margin-top: 2rem;
-
         font-size: 2rem;
         color: #25523B;
+        padding-left: 40px;
     }
+    
 
     .sort{
-        grid-column: 6;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-
-        /* justify-content: start;
-        align-items: start; */
-
-        margin-top: 2rem;
-        margin-right: calc(1.25rem + 1.2rem);
-        width: 15vw;
-
         font-size: 1.5rem;
+        width: min(280px, 32vw);
+        padding-right: 40px;
     }            
 
         .sort-select{
             width: 100%;
-
-            display: flex;
-            flex-wrap: nowrap;
-            flex-direction: column;
 
             border: 1px solid rgba(36, 61, 41, 0.16);
             color: #25523B;
@@ -55,8 +44,8 @@
         .sort-select-container{
             display: block;
             position: absolute;
-            top: calc(2.2rem + 2rem + 4.5rem + 1rem);
-            width: 15vw;
+            top: calc(2.2rem + 2rem + 4.5rem + 1rem + 1rem + 2px);
+            width: max(300px, 15vw);
 
             border: 1px solid #25523B;
             z-index: 1;
@@ -89,6 +78,13 @@
         .active{
             background-color: rgb(255, 239, 224);
         }
+
+.container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+            
+    margin-bottom: 10vh;
+}
 
     .nav{
         display: flex;
@@ -269,3 +265,7 @@
 
                     margin-block: .25rem;
                 }
+
+@media (max-width: 1440px) {
+    
+}
