--- a/src/app/indoor-plants/indoor-plants.component.html
+++ b/src/app/indoor-plants/indoor-plants.component.html
@@ -1,5 +1,4 @@
-<div class="container">
-
+<div class="header-container">
     <div class="header">
         <p>
             Цветя За Дома
@@ -19,7 +18,8 @@
             <li [class.active]="activeItem === 4" (click)="onItemClick(4, 'Най-продавани')">Най-продавани</li>
         </ul>
     </div>
-
+</div>
+<div class="container">
     <div class="nav">
         <ul>
             <div *ngFor="let item of dropdownItems">
